--- a/HTML/mangas.html
+++ b/HTML/mangas.html
@@ -17,11 +17,11 @@
     <!-- font "Y" -->
 
     <!--    CSS    -->
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/mangas.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/mangas.css">
     <!--    TITLE    -->
     <title>Mangas</title>
-    <link rel="shortcut icon" href="/IMG/icon.png">
+    <link rel="shortcut icon" href="../IMG/icon.png">
 </head>
 
 <body>
