--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <!--    GoogleFonts    -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- font "X" -->
 
   <!-- font "Y" -->
@@ -28,7 +30,7 @@
 <body>
   <!-- HEADER -->
   <header>
-    <div class="container-fluid headerBg">
+    <div class="container-fluid headerBg mb-5">
       <div class="row h-100">
         <div class="col-1"></div>
         <div class="col-5 h-100 d-flex justify-content-between align-items-center mx-auto textHeader">
@@ -47,7 +49,8 @@
                 Idioma
               </button>
               <ul class="dropdown-menu DrpDwnBg">
-                <li><a class="drpDwnItem activeDrpDwnItem dropdown-item text-center" href=""><strong class="strongIdiom px-2">Español</strong></a></li>
+                <li><a class="drpDwnItem activeDrpDwnItem dropdown-item text-center" href=""><strong
+                      class="strongIdiom px-2">Español</strong></a></li>
                 <li><a class="drpDwnItem dropdown-item text-center text-black" href="#">Inglés</a></li>
               </ul>
             </div>
@@ -60,20 +63,107 @@
     </div>
   </header>
 
+
   <!-- MAIN -->
+  <main>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6 mx-auto mt-5 text-center d-flex justify-content-center align-items-center firstText">
+          <p>
+            ¡Bienvenido a mi sitio web de anime y manga!<br>Aquí encontraras todo lo que necesitas saber sobre los
+            títulos
+            que he visto y que he querido compartir contigo,<br>desde reseñas y recomendaciones hasta estadísticas y
+            rankings basados en la información de MyAnimeList.
+          </p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center mt-5 text-center">
+        <div class="col-10">
+          <div class="row">
+            <div class="col-6 secondText secondText1 ps-5">
+              <!-- NEWSPAPER ICON -->
+              <i class="fa-solid fa-newspaper fa-beat-fade" style="color: #2C5BBA; font-size: 128px;"></i>
+              <div class="divMainText ms-5">
+                <h4 class="h4MainIndex">Descubre tus obsesiones</h4>
+                <p class="pMainIndex">En nuestra página principal, podrás mantenerte al día con las últimas noticias y
+                  actualizaciones en el
+                  mundo del anime y manga, así como descubrir nuevos títulos que quizás no conocías.</p>
+              </div>
+            </div>
+            <div class="col-6 secondText secondText2">
+              <div class="divMainText me-5 pe-3">
+                <h4 class="h4MainIndex">Reseñas personales</h4>
+                <p class="pMainIndex">También podrás leer mis reseñas y recomendaciones, basadas en mi opinión personal,
+                  para encontrar tu
+                  próxima serie o manga favorito.</p>
+              </div>
+              <!-- THUMBSUP ICON -->
+              <i class="fa-solid fa-thumbs-up fa-beat-fade" style="color: #2C5BBA; font-size: 128px;"></i>
+            </div>
+            <div class="col-6 secondText secondText3">
+              <!-- SEARCH ICON -->
+              <i class="fa-solid fa-magnifying-glass fa-beat-fade" style="color: #2C5BBA; font-size: 128px;"></i>
+              <div class="divMainText ms-5">
+                <h4 class="h4MainIndex">Encuentra lo que buscas</h4>
+                <p class="pMainIndex">Si estás buscando algo en particular, nuestra sección de búsqueda y navegación te
+                  permitirá encontrar
+                  fácilmente los títulos que estás buscando, ya sea por género, año de lanzamiento, popularidad, etc.
+                </p>
+              </div>
+            </div>
+            <div class="col-6 secondText secondText4">
+              <div class="divMainText me-5">
+                <h4 class="h4MainIndex">Estadísticas confiables</h4>
+                <p class="pMainIndex">Además, nuestra sección de estadísticas y rankings te mostrará los títulos más
+                  populares y mejor
+                  valorados en nuestro sitio web, basados en la información de MyAnimeList.</p>
+              </div>
+              <!-- RANKING ICON -->
+              <i class="fa-solid fa-ranking-star fa-beat-fade" style="color: #2C5BBA; font-size: 128px;"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 mx-auto mt-5 mb-5 text-center d-flex justify-content-center align-items-center thirdText">
+          <p>
+            Me encantaría saber tu opinión sobre mi sitio web, así que no dudes en dejarme tus comentarios y sugerencias
+            en la sección de contacto. ¡Espero que encuentres y disfrutes muchos títulos nuevos para ver y leer!
+          </p>
+        </div>
+      </div>
+    </div>
+  </main>
 
 
   <!-- FOOTER -->
-
-
-
-
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 footerIndex bg-black mx-0 px-0 text-white">
+          <div class="btn-group dropup">
+            <button type="button" class="btn dropdown-toggle btnContact" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Contacto
+            </button>
+            <ul class="dropdown-menu">
+              <!-- Dropdown menu links -->
+            </ul>
+          </div>
+          <p class="m-0" style="user-select: none;">Copyright</p>
+          <a href="#" class="linkFooter d-flex align-items-center justify-content-center">Subir</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!------------------------------------------------------------------------------------------------------------------------------>
 
   <!--    Bootstrap    -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+  <!--    FontAwesome   -->
+  <script src="https://kit.fontawesome.com/b41f9e3c8e.js" crossorigin="anonymous"></script>
   <!--    JavaScript    -->
 </body>
 
