--- a/HTML/mangas.html
+++ b/HTML/mangas.html
@@ -2,47 +2,79 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--    Bootstrap    -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!--    GoogleFonts    -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- font "X" -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--    Bootstrap    -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <!--    GoogleFonts    -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- font "X" -->
 
-    <!-- font "Y" -->
+  <!-- font "Y" -->
 
-    <!--    CSS    -->
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/mangas.css">
-    <!--    TITLE    -->
-    <title>Mangas</title>
-    <link rel="shortcut icon" href="../IMG/icon.png">
+  <!--    CSS    -->
+  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="../CSS/mangas.css">
+  <!--    TITLE    -->
+  <title>Mangas</title>
+  <link rel="shortcut icon" href="../IMG/icon.png">
 </head>
 
 <body>
-    <!-- HEADER -->
+  <!-- HEADER -->
+  <header>
+    <div class="container-fluid headerBg mb-5">
+      <div class="row h-100">
+        <div class="col-1"></div>
+        <div class="col-5 h-100 d-flex justify-content-between align-items-center mx-auto textHeader">
+          <div class="">
+            <a href="./animes.html" class="linkHeader">Anime</a>
+          </div>
+          <div class="">
+            <a href="#" class="linkHeader">Manga</a>
+          </div>
+        </div>
+        <div class="col-1 d-flex align-items-center">
+          <div class="">
+            <div class="dropdown idiomDrpDwn">
+              <button class="btn dropdown-toggle btnIdiomDrpDwn" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Idioma
+              </button>
+              <ul class="dropdown-menu DrpDwnBg">
+                <li><a class="drpDwnItem activeDrpDwnItem dropdown-item text-center" href=""><strong
+                      class="strongIdiom px-2">Español</strong></a></li>
+                <li><a class="drpDwnItem dropdown-item text-center text-black" href="#">Inglés</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="../IMG/icon.png" alt="" class="headerIcon">
+      </div>
+    </div>
+  </header>
+
+  <!-- MAIN -->
 
 
-    <!-- MAIN -->
-
-
-    <!-- FOOTER -->
+  <!-- FOOTER -->
 
 
 
 
-    <!------------------------------------------------------------------------------------------------------------------------------>
+  <!------------------------------------------------------------------------------------------------------------------------------>
 
-    <!--    Bootstrap    -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <!--    JavaScript    -->
+  <!--    Bootstrap    -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <!--    JavaScript    -->
 </body>
 
 </html>
