--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="col-1"></div>
         <div class="col-5 h-100 d-flex justify-content-between align-items-center mx-auto textHeader">
           <div class="">
-            <a href="#" class="linkHeader">Anime</a>
+            <a href="/HTML/animes.html" class="linkHeader">Anime</a>
           </div>
           <div class="">
-            <a href="#" class="linkHeader">Manga</a>
+            <a href="/HTML/mangas.html" class="linkHeader">Manga</a>
           </div>
         </div>
         <div class="col-1 d-flex align-items-center">
@@ -140,14 +140,15 @@
   <footer>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 footerIndex bg-black mx-0 px-0 text-white">
-          <div class="btn-group dropup">
-            <button type="button" class="btn dropdown-toggle btnContact" data-bs-toggle="dropdown"
-              aria-expanded="false">
+        <div class="col-12 footerIndex mx-0 px-0 text-white">
+          <div class="dropup">
+            <button class="btn btn-secondary dropdown-toggle btnContact" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Contacto
             </button>
-            <ul class="dropdown-menu">
-              <!-- Dropdown menu links -->
+            <ul class="dropdown-menu" style="background-color: rgb(130, 130, 130);">
+              <li><a class="dropdown-item" href="#"><i class="bi bi-envelope me-2" style="color: #ff2200;"></i>Gmail</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-linkedin me-2" style="color: #2C5BBA;"></i>LinkedIn</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-instagram me-2" id="Instagram"></i>Instagram</a></li>
             </ul>
           </div>
           <p class="m-0" style="user-select: none;">Copyright</p>
