--- a/HTML/animes.html
+++ b/HTML/animes.html
@@ -64,73 +64,186 @@
   <main>
     <div class="container">
       <div class="row">
+
+
         <div class="col-3">
-          <div class="flip-card">
+          <div class="flip-card" id="31240">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="kimetsu">
+                <img class="animeImg" src="" alt="Re:Zero">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Kimetsu no Yaiba</h1>
-                  <p>Opinion mia</p>
-                  <a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank" class="btn btn-danger">Más informacion</a>
+                  <h1>Re:Zero</h1>
+                  <p>Opinion mía</p>
+                  <a href="https://myanimelist.net/anime/31240/Re_Zero_kara_Hajimeru_Isekai_Seikatsu" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
+
         <div class="col-3">
-          <div class="flip-card">
+          <div class="flip-card" id="">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="kimetsu">
+                <img class="animeImg" src="" alt="">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Kimetsu no Yaiba</h1>
-                  <p>Opinion mia</p>
-                  <button type="button" class="btn btn-danger">Más informacion</button>
+                  <h1><h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="flip-card">
+				<div class="col-3">
+          <div class="flip-card" id="">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="kimetsu">
+                <img class="animeImg" src="" alt="">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Kimetsu no Yaiba</h1>
-                  <p>Opinion mia</p>
-                  <button type="button" class="btn btn-danger">Más informacion</button>
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="flip-card">
+
+				<div class="col-3">
+          <div class="flip-card" id="">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="kimetsu">
+                <img class="animeImg" src="" alt="">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Kimetsu no Yaiba</h1>
-                  <p>Opinion mia</p>
-                  <button type="button" class="btn btn-danger">Más informacion</button>
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
+				
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+				<div class="col-3">
+          <div class="flip-card" id="">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img class="animeImg" src="" alt="">
+              </div>
+              <div class="flip-card-back">
+                <div class="inner text-center">
+                  <h1></h1>
+                  <p>Opinion mía</p>
+                  <a href="" target="_blank" class="btn btn-danger">Más informacion</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
     </div>
