--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div>
-        <img src="IMG/icon.png" alt="" class="headerIcon">
+        <img src="/IMG/icon.png" alt="" class="headerIcon">
       </div>
     </div>
   </header>
