--- a/HTML/animes.html
+++ b/HTML/animes.html
@@ -12,10 +12,9 @@
   <!--    GoogleFonts    -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- font "X" -->
-
-  <!-- font "Y" -->
-
+	<!-- font "X" -->
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&
+	family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
   <!--    CSS    -->
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="stylesheet" href="../CSS/animes.css">
@@ -61,23 +60,23 @@
   </header>
 
   <!-- MAIN -->
-  <main>
+  <main class="pt-5">
     <div class="container">
-      <div class="row">
+      <div class="row w-100">
 
 
         <div class="col-4 d-flex justify-content-center">
           <div class="flip-card" id="31240">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/reZero.webp" alt="Re:Zero">
+                <img class="animeImg" src="../IMG/covers/animes/reZero.webp" alt="Re:Zero">
               </div>
-              <div class="flip-card-back d-flex align-items-center justify-content-center">
+              <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1 class="mt-4">Re:Zero</h1>
-                  <p class="justify-content-center">Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/31240/Re_Zero_kara_Hajimeru_Isekai_Seikatsu" target="_blank" class="btn btn-danger">Más informacion</a>
+                  <h1 class="mt-4 mb-5">Re:Zero</h1>
+                  <p>Opinion mía</p>
                 </div>
+								<a href="https://myanimelist.net/anime/31240/Re_Zero_kara_Hajimeru_Isekai_Seikatsu" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -88,14 +87,14 @@
           <div class="flip-card" id="38000">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/kimetsuNoYaiba.webp" alt="Kimetsu no Yaiba">
+                <img class="animeImg" src="../IMG/covers/animes/kimetsuNoYaiba.webp" alt="Kimetsu no Yaiba">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Kimetsu no Yaiba</h1>
+                  <h1 class="mt-4 mb-5">Kimetsu no Yaiba</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -106,14 +105,14 @@
           <div class="flip-card" id="44511">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/chainSawMan.jfif" alt="Chainsaw Man">
+                <img class="animeImg" src="../IMG/covers/animes/chainSawMan.jfif" alt="Chainsaw Man">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Chainsaw Man</h1>
+                  <h1 class="mt-4 mb-5">Chainsaw Man</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/44511/Chainsaw_Man" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/44511/Chainsaw_Man" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -124,14 +123,14 @@
           <div class="flip-card" id="28851">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/koeNoKatachi.webp" alt="Koe no Katachi">
+                <img class="animeImg" src="../IMG/covers/animes/koeNoKatachi.webp" alt="Koe no Katachi">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Koe no Katachi</h1>
+                  <h1 class="mt-4 mb-5">Koe no Katachi</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/28851/Koe_no_Katachi" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/28851/Koe_no_Katachi" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -142,14 +141,14 @@
           <div class="flip-card" id="10087">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/fateZero.webp" alt="Fate/Zero">
+                <img class="animeImg" src="../IMG/covers/animes/fateZero.webp" alt="Fate/Zero">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Fate/Zero</h1>
+                  <h1 class="mt-4 mb-5">Fate/Zero</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/10087/Fate_Zero" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/10087/Fate_Zero" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -160,14 +159,14 @@
           <div class="flip-card" id="40748">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/jujutsuKaisen.avif" alt="Jujutsu Kaisen">
+                <img class="animeImg" src="../IMG/covers/animes/jujutsuKaisen.avif" alt="Jujutsu Kaisen">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Jujutsu Kaisen</h1>
+                  <h1 class="mt-4 mb-5">Jujutsu Kaisen</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/40748/Jujutsu_Kaisen" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/40748/Jujutsu_Kaisen" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -178,14 +177,14 @@
           <div class="flip-card" id="37450">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/seishunButaYarou.webp" alt="Seishun Buta Yarou">
+                <img class="animeImg" src="../IMG/covers/animes/seishunButaYarou.webp" alt="Seishun Buta Yarou">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Seishun Buta Yarou</h1>
+                  <h1 class="mt-4 mb-5">Seishun Buta Yarou</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/37450/Seishun_Buta_Yarou_wa_Bunny_Girl_Senpai_no_Yume_wo_Minai" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/37450/Seishun_Buta_Yarou_wa_Bunny_Girl_Senpai_no_Yume_wo_Minai" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -196,14 +195,14 @@
           <div class="flip-card" id="9253">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/steinsGate.webp" alt="Steins;Gate">
+                <img class="animeImg" src="../IMG/covers/animes/steinsGate.webp" alt="Steins;Gate">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Steins;Gate</h1>
+                  <h1 class="mt-4 mb-5">Steins;Gate</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/9253/Steins_Gate" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/9253/Steins_Gate" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
@@ -214,32 +213,32 @@
           <div class="flip-card" id="31478">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/bungouStrayDogs.jfif" alt="Bungou Stray Dogs">
+                <img class="animeImg" src="../IMG/covers/animes/bungouStrayDogs.jfif" alt="Bungou Stray Dogs">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Bungou Stray Dogs</h1>
+                  <h1 class="mt-4 mb-5">Bungou Stray Dogs</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/31478/Bungou_Stray_Dogs" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/31478/Bungou_Stray_Dogs" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
         </div>
         
         
-        <div class="col-4 d-flex justify-content-center">
+        <div class="col-4 d-flex justify-content-center mx-auto">
           <div class="flip-card" id="50709">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img class="animeImg" src="../IMG/animeCovers/lycorisRecoil.webp" alt="Lycoris Recoil">
+                <img class="animeImg" src="../IMG/covers/animes/lycorisRecoil.webp" alt="Lycoris Recoil">
               </div>
               <div class="flip-card-back">
                 <div class="inner text-center">
-                  <h1>Lycoris Recoil</h1>
+                  <h1 class="mt-4 mb-5">Lycoris Recoil</h1>
                   <p>Opinion mía</p>
-                  <a href="https://myanimelist.net/anime/50709/Lycoris_Recoil" target="_blank" class="btn btn-danger">Más informacion</a>
                 </div>
+								<a href="https://myanimelist.net/anime/50709/Lycoris_Recoil" target="_blank" class="btn btn-success mt-auto mb-4 w-75 align-self-center"><span>Más informacion</span></a>
               </div>
             </div>
           </div>
