--- a/HTML/animes.html
+++ b/HTML/animes.html
@@ -18,6 +18,7 @@
   <!--    CSS    -->
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="stylesheet" href="../CSS/animes.css">
+	<link rel="stylesheet" href="../CSS/animations.css">
   <!--    TITLE    -->
   <title>Animes</title>
   <link rel="shortcut icon" href="../IMG/icon.png">
