--- a/HTML/mangas.html
+++ b/HTML/mangas.html
@@ -18,6 +18,7 @@
 	<!--    CSS    -->
 	<link rel="stylesheet" href="../CSS/style.css">
 	<link rel="stylesheet" href="../CSS/mangas.css">
+	<link rel="stylesheet" href="../CSS/animations.css">
 	<!--    TITLE    -->
 	<title>Mangas</title>
 	<link rel="shortcut icon" href="../IMG/icon.png">
