--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<!--    CSS    -->
 	<link rel="stylesheet" href="CSS/style.css">
+	<link rel="stylesheet" href="CSS/animations.css">
 	<!--    TITLE    -->
 	<title>Pagina Principal</title>
 	<link rel="shortcut icon" href="IMG/icon.png">
@@ -79,7 +80,7 @@
 			</div>
 			<div class="row d-flex justify-content-center mt-5 text-center">
 				<div class="col-10">
-					<div class="row">
+					<div class="row rowSecondText">
 						<div class="col-6 secondText secondText1 ps-5">
 							<!-- NEWSPAPER ICON -->
 							<i class="fa-solid fa-newspaper fa-beat-fade" style="color: #2C5BBA; font-size: 128px;"></i>
