--- a/HTML/animes.html
+++ b/HTML/animes.html
@@ -18,7 +18,7 @@
   <!--    CSS    -->
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="stylesheet" href="../CSS/animes.css">
-	<link rel="stylesheet" href="../CSS/animations.css">
+  <link rel="stylesheet" href="../CSS/animations.css">
   <!--    TITLE    -->
   <title>Animes</title>
   <link rel="shortcut icon" href="../IMG/icon.png">
@@ -66,7 +66,7 @@
       <div class="row w-100">
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card1">
           <div class="flip-card" id="31240">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -78,7 +78,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/31240/Re_Zero_kara_Hajimeru_Isekai_Seikatsu" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/31240/Re_Zero_kara_Hajimeru_Isekai_Seikatsu" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -94,7 +95,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card2">
           <div class="flip-card" id="38000">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -106,7 +107,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/38000/Kimetsu_no_Yaiba" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -122,7 +124,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card3">
           <div class="flip-card" id="44511">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -134,7 +136,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/44511/Chainsaw_Man" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/44511/Chainsaw_Man" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -150,7 +153,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card4">
           <div class="flip-card" id="28851">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -162,7 +165,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/28851/Koe_no_Katachi" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/28851/Koe_no_Katachi" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -178,7 +182,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card5">
           <div class="flip-card" id="10087">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -190,7 +194,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/10087/Fate_Zero" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/10087/Fate_Zero" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -206,7 +211,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card6">
           <div class="flip-card" id="40748">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -218,7 +223,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/40748/Jujutsu_Kaisen" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/40748/Jujutsu_Kaisen" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -234,7 +240,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card7">
           <div class="flip-card" id="37450">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -246,7 +252,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/37450/Seishun_Buta_Yarou_wa_Bunny_Girl_Senpai_no_Yume_wo_Minai" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/37450/Seishun_Buta_Yarou_wa_Bunny_Girl_Senpai_no_Yume_wo_Minai"
+                    target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -262,7 +269,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card8">
           <div class="flip-card" id="9253">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -274,7 +281,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/9253/Steins_Gate" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/9253/Steins_Gate" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -290,7 +298,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card9">
           <div class="flip-card" id="31478">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -302,7 +310,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/31478/Bungou_Stray_Dogs" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/31478/Bungou_Stray_Dogs" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
@@ -318,7 +327,7 @@
         </div>
 
 
-        <div class="col-4 d-flex justify-content-center allCards">
+        <div class="col-4 d-flex justify-content-center allCards" id="card10">
           <div class="flip-card" id="50709">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -330,7 +339,8 @@
                   <div class="cardClickP position-absolute">
                     <p class="text-primary mb-0">hola hola hola hola hola</p>
                   </div>
-                  <a href="https://myanimelist.net/anime/50709/Lycoris_Recoil" target="_blank" class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
+                  <a href="https://myanimelist.net/anime/50709/Lycoris_Recoil" target="_blank"
+                    class="btn myAnimeListAnchor">Más Información<br>MyAnimeList</a>
                 </div>
               </div>
               <div class="flip-card-back">
